2001-05-14  Jim Meyering  <meyering@lucent.com>

	* automake.in (macro_define): Change one remaining use of
	`variable_dump' to `macro_dump'.

2001-05-13  Tom Tromey  <tromey@redhat.com>

	* m4/depend.m4 (AM_DEPENDENCIES): Prefer gcc3 over gcc for objc
	and gcj.

2001-05-13  Akim Demaille  <akim@epita.fr>

	* automake.in (&scan_texinfo_file, &handle_dist, &handle_gettext)
	(&handle_footer, &handle_factored_dependencies, &handle_emacs_lisp)
	(&am_primary_prefixes): Use `map' rather than `grep'.

2001-05-13  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Set config_vars for yacc, yaccxx, lex,
	lexxx, asm.
	(&lang_c_finish, &lang_yacc_finish, &lang_lex_finish): Simplify.
	(&lang_asm_finish): Remove, set asm's finisher to C's one.

2001-05-13  Akim Demaille  <akim@epita.fr>

	* lang-compile.am: New file, loaded once per language.
	* depend2.am: Move definitions loaded once per language in the
	aforementioned file.
	* automake.in (&handle_languages): Load it.
	(&lang_ppf77_finish, &lang_ratfor_finish): Remove as it's now
	handled by lang-compile.am.

2001-05-13  Tom Tromey  <tromey@redhat.com>

	* tests/Makefile.am (TESTS): Added python.test.
	* tests/python.test: New file.
	* automake.in (handle_languages): Use
	config_aux_dir_set_in_configure_in.
	(handle_python): Correctly mention AM_PATH_PYTHON.  Use
	py-compile, not py_comp.  Define py_compile macro.

2001-05-13  Derek Price  <dprice@openavenue.com>

	* automake.in (require_file_with_conf_line,
	require_file_with_line, require_file): Pass a @require_file_path
	of $relative_dir instead of '.' to require_file_internal so that
	all the special casing of '.' can be removed elsewhere.
	(require_config_file, require_conf_file_with_line,
	require_conf_file_with_conf_line): Remove special casing for '.'
	and make sure $config_aux_dir is maintained properly.
	(require_file_internal): Remove special casing of '.' and set
	@require_file_path when missing files are added.