@@ -1,3 +1,11 @@
+2001-05-13  James Henstridge  <james@daa.com.au>
+
+	* m4/python.m4 (AM_PATH_PYTHON): Added more names for python.
+	Point pythondir at site-packages directory.  Rename
+	PYTHON_SITE_PACKAGE to pkgpythondir.  Rename PYTHON_SITE_EXEC to
+	pyexecdir.  Removed package/module argument.  Removed
+	PYTHON_SITE_INSTALL.  Added version checking.
+
 2001-05-14  Jim Meyering  <meyering@lucent.com>
 
 	* automake.in (macro_define): Change one remaining use of
